<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemPredictCS"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000">

    <View
        android:id="@+id/itemPredictView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="#C93C9C19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/itemPredictTxtMinutes"
        android:layout_width="198dp"
        android:layout_height="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/how_many_minutes"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/itemPredictView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemPredictTxtBusNumber"
        android:layout_width="192dp"
        android:layout_height="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/bus_0000"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/itemPredictView"
        app:layout_constraintTop_toTopOf="@+id/itemPredictView" />

    <TextView
        android:id="@+id/itemPredictTxtTime"
        android:layout_width="189dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_00_00_pm"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/itemPredictView"
        app:layout_constraintEnd_toEndOf="@+id/itemPredictView"
        app:layout_constraintTop_toBottomOf="@+id/itemPredictTxtBusNumber" />

    <TextView
        android:id="@+id/itemPredictTxtDirection"
        android:layout_width="195dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/eastbound_to_navy_pier"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemPredictView"
        app:layout_constraintStart_toStartOf="@+id/itemPredictView"
        app:layout_constraintTop_toBottomOf="@+id/itemPredictTxtBusNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>